force-app/main/default/objects/Incentive_Goal__c/Incentive_Goal__c.object-meta.xml
<CustomObject>
    <label>Incentive Goal</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Incentive Goal Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>