force-app/main/default/objects/Incentive_Goal__c/fields/Incentive_Contract__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract__c</fullName>
    <label>Incentive Contract</label>
    <referenceTo>Incentive_Contract__c</referenceTo>
    <relationshipLabel>Incentive Goals</relationshipLabel>
    <relationshipName>Incentive_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>