force-app/main/default/objects/Incentive_Goal__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <label>Trait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>RR1</fullName>
            </value>
            <value>
                <fullName>Xtend</fullName>
            </value>
            <value>
                <fullName>XtendFlex</fullName>
            </value>
            <value>
                <fullName>Enlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>